# consumer-flex-app

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint_and_test.yml
consumer_flex_app/demand_flexibility_service/: app.py  extract.py  loaders.py  render.py  transform.py  weather.py
tests/demand_flexibility_service/: test_app.py  test_transform.py
