[tool.poetry]
name = "consumer-flex-app"
version = "0.1.0"
description = ""
authors = ["Ryan Jenkinson <hello@ryan.eco>"]
readme = "README.md"
packages = [{include = "consumer_flex_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
streamlit = "^1.17.0"
clumper = "^0.2.15"
meteostat = "^1.6.5"
geopandas = "^0.12.2"
millify = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
ipykernel = "^6.20.2"
pydeck = {extras = ["jupyter"], version = "^0.8.0"}
pre-commit = "^3.0.2"


[tool.poetry.group.plotting.dependencies]
matplotlib = "^3.6.3"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
