[tool.poetry]
name = "consumer-flex-app"
version = "0.1.0"
description = ""
authors = ["Ryan Jenkinson <hello@ryan.eco>"]
readme = "README.md"
packages = [{include = "consumer_flex_app"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pandas = ">=1.5, <2"
streamlit = "^1.27.0"
clumper = "^0.2.15"
geopandas = "^0.14.0"
millify = "^0.1.1"
seaborn = "^0.12.2"
meteostat = "^1.6.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
ipykernel = "^6.25.2"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
